# Proj_Autocapacita_p2

./: .env.example  README.md  main.py  pyproject.toml
app/agents/: cep_agent.py  weather_agent.py
app/core/: config.py  weather_codes.py
app/graph/: agent_graph.py  nodes.py  state.py
app/llm/: client.py  prompts.py
app/models/: cep_model.py  llm_models.py  request_model.py  response_model.py  weather_model.py
app/routes/: agent_router.py  cep_route.py  weather_route.py
app/services/: agent_service.py  cep_service.py  weather_service.py
tests/: __init__.py  test_graph_integration.py  test_nodes.py  test_nodes_simple.py
